# Karabo

./: .clang-format  .clang-tidy  .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  BUILD_SYSTEM_TODO.md  CMakeLists.txt  CONTRIBUTING.md  Contributor_License_Agreement.md  Entity_Contributor_License_Agreement.md  PUBLIC_RELEASE_KARABO_TODO.md  README  README.md  activate_conda_karabo.sh  auto_build_all.sh  build_conda_env.sh  cliff.toml  cmake_auto_build_all.sh  doxide.yaml  mkdocs.yml  pytest.ini  ruff.toml  run_python_tests.sh  set_lsb_release_info.sh
src/: CMakeLists.txt  karabo.hpp  karabo_DeviceNode_requirments.rst
src/brokerMessageLogger/: CMakeLists.txt  brokerMessageLogger.cc
src/cmake/: code-coverage.cmake  cxx-options.cmake  import_karabo_lib.cmake  karabo-lib-target-name.cmake  resolve-karabo-lib-target.cmake  resolve-karabo-lib-target.in
src/cppLongTests/: CMakeLists.txt
src/devScripts/: lint_modified.sh  pre-commit-hook
src/deviceServer/: CMakeLists.txt  deviceServer.cc
src/environment.in/: KARABO_BROKER  KARABO_PROJECT_DB_PASSWORD
src/integrationTests/: AlarmService_Test.cc  AlarmService_Test.hh  AlarmTesterDevice.cc  AlarmTesterDevice.hh  AlarmTesterDevice_3.cc  AlarmTesterDevice_3.hh  BaseLogging_Test.cc  BaseLogging_Test.hh  CMakeLists.txt  CppUnitMacroExtension.hh  DataLogNanTestDevice.cc  DataLogNanTestDevice.hh  DataLogTestDevice.cc  DataLogTestDevice.hh  DataLogging_Test.cc  DataLogging_Test.hh  DeviceServerRunner_Test.cc  DeviceServerRunner_Test.hh  Device_Test.cc  Device_Test.hh  GuiServer_Test.cc  GuiServer_Test.hh  GuiVersion_Test.cc  GuiVersion_Test.hh  LockTestDevice.cc  LockTestDevice.hh  LockTest_Test.cc  LockTest_Test.hh  NonSceneProviderTestDevice.cc  NonSceneProviderTestDevice.hh  P2PSenderDevice.cc  P2PSenderDevice.hh  PipeReceiverDevice.cc  PipeReceiverDevice.hh  PipelinedProcessing_Test.cc  PipelinedProcessing_Test.hh  PropertyTest_Test.cc  PropertyTest_Test.hh  RunConfigurationGroup_Test.cc  RunTimeSchemaAttributes_Test.cc  (+26 more)
src/jkarabo/: GuiClientMain.java
src/karabind/: CMakeLists.txt  ConfigurationTestClasses.cc  ConfigurationTestClasses.hh  FromNumpy.cc  FromNumpy.hh  HandlerWrap.cc  HandlerWrap.hh  PyCoreDeviceClient.cc  PyCoreLockWrap.cc  PyCoreLockWrap.hh  PyIoFileTools.cc  PyLogLogger.cc  PyNetAmqpConnectionClient.cc  PyNetConnectionChannel.cc  PyNetEventLoop.cc  PyTypes.hh  PyUtilAlarmElement.cc  PyUtilClassInfo.cc  PyUtilDateTimeString.cc  PyUtilDetectorGeometry.cc  PyUtilDims.cc  PyUtilEpochstamp.cc  PyUtilException.cc  PyUtilHash.cc  PyUtilHashAttributes.cc  PyUtilHashNode.cc  PyUtilJsonToHashParser.cc  PyUtilNDArray.cc  PyUtilRollingWindowStatistics.cc  PyUtilSchema.cc  PyUtilSchemaChoiceElement.cc  PyUtilSchemaElement.cc  PyUtilSchemaElement.hh  PyUtilSchemaListElement.cc  PyUtilSchemaNodeElement.cc  PyUtilSchemaOverwriteElement.cc  PyUtilSchemaTableElement.cc  PyUtilSchemaValidator.cc  PyUtilStateElement.cc  PyUtilTimeDuration.cc  (+16 more)
src/karabo/: CMakeLists.txt  ClassInfo_Test.cc  ClassInfo_Test.hh  HashTextFileOutput.cc  SchemaBinaryFileInput.cc  SchemaTextFileOutput.cc  SchemaXsdSerializer_Test.cc  activateKarabo.in  core.hpp  data.hpp  io.hpp  karabo.hpp  log.hpp  net.hpp  util.hpp  webAuth.hpp  xip.hpp  xms.hpp
src/karathon/: AttributesNodeWrap.hh  AttributesWrap.cc  AttributesWrap.hh  CMakeLists.txt  ChannelWrap.cc  ChannelWrap.hh  ConnectionWrap.cc  ConnectionWrap.hh  DefaultValueVectorWrap.hh  DetectorGeometryWrap.hh  DeviceClientWrap.hh  DimsWrap.hh  FromNumpy.cc  FromNumpy.hh  HashWrap.cc  HashWrap.hh  IOServiceWrap.hh  MemberSlotWrap.hh  NodeWrap.hh  PyCoreDeviceClient.cc  PyCoreLockWrap.cc  PyCoreLockWrap.hh  PyH5Tools.cc  PyIoFileTools.cc  PyIoFormat.cc  PyIoReader.cc  PyIoSerialization.cc  PyIoWriter.cc  PyLogLogger.cc  PyUtilAlarmElement.cc  PyUtilChoiceElement.cc  PyUtilClassInfo.cc  PyUtilDateTimeString.cc  PyUtilDetectorGeometry.cc  PyUtilDims.cc  PyUtilEpochstamp.cc  PyUtilException.cc  PyUtilHash.cc  PyUtilImageElement.cc  PyUtilJsonToHashParser.cc  (+48 more)
src/p2pMessageLogger/: p2pMessageLogger.cc
src/pythonCli/: deviceClient.py  deviceclientproject.py  ikarabo
src/pythonCommon/: TODO.rst
src/pythonGui/: .isort.cfg  CONTRIBUTING.md  MANIFEST.in  README  README.md  TESTING  async.py  attributetreewidget.py  base_environment.devenv.yml  basecomponent.py  basetreewidgetitem.py  choicecomponent.py  components.py  configuration.py  configurationpanel.py  const.py  custommiddlepanel.py  customviewpanel.py  customviewwidget.py  customwidget.py  customxmlreader.py  customxmlwriter.py  datanotifier.py  debug.py  dialogs.py  displaycomponent.py  displaywidget.py  divwidget.py  docktabwindow.py  dockwindow.py  documentationpanel.py  editableapplylatercomponent.py  editableapplynowcomponent.py  editablenoapplycomponent.py  editablepathapplylatercomponent.py  editablepathnoapplycomponent.py  editablewidget.py  enums.py  environment.devenv.yml  finders.py  (+72 more)
src/pythonGui2/: attributetreewidget.py  attributetreewidgetitem.py  basetreewidgetitem.py  displaycomponent.py  divwidget.py  documentationpanel.py  editableapplynowcomponent.py  enums.py  graphicsview.py  imagetreewidgetitem.py  logindialog.py  logwidget.py  mainwindow.py  manager.py  messagebox.py  navigationhierarchymodel.py  navigationhierarchymodel2.py  navigationhierarchynode.py  navigationtreeview.py  navigationtreeview2.py  network.py  network2.py  parametertreewidget.py  qrc_icons.py  schemareader.py  singleton.py  sqldatabase.py  vacuumwidget.py  workthread.py  xsdreader.py
src/pythonKarabo/: .isort.cfg  TODO.rst  TODO_QT5.rst  base_fsm.py  configurator.py  core_exceptions.py  device_server.py  device_server_fsm.py  fsm.py  karabo_decorators.py  native_environment.devenv.yml  nosetests.py  ok_error_fsm.py  plugin_loader.py  pyproject.toml  pythonTest.xml  python_device.py  runner.py  setup.py  start_stop_fsm.py
src/pythonTools/: getKaraboData.py
src/serverControl/: .gitignore  config.ini  downloadandinstall.sh  karabo-server-control  karaboServerControl.py  parassh.sh  pssh2.sh  pssh3.sh  test1.json  (+3 more)
(+4725 files in other folders)
